<resources>
    <string name="app_name">Go Akademik</string>
    <string name="create_account">Buat Akun</string>
    <string name="login_button">Masuk</string>
    <string name="password_hint">sandi…</string>
    <string name="username_hint">nama…</string>
    <string name="logo_login_deskripsi">logo_login</string>
    <string name="nim_nip_hint_registrasi">nim / nip</string>
    <string name="alamat_hint_registrasi">alamat…</string>
    <string name="alamat_email_hint_registrasi">alamat email…</string>
    <string name="konfirmasi_sandi_hint_registrasi">konfirmasi sandi…</string>
    <string name="logo_buat_akun">Logo Buat Akun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_user">Home</string>
    <string name="ajukan_menu_user">Ajukan</string>
    <string name="notifikasi_menu_user">Notifikasi</string>
    <string name="account_menu_user">Account</string>
    <string name="dashboard_menu_admin">Dashboard</string>
    <string name="notifikasi_menu_admin">Notifikasi</string>
    <string name="account_menu_admin">Account</string>
    <string name="desc_logo_sambutan">Lp3i Bergengsi Pasti</string>
    <string name="tekan_tombol_untuk_mengajukan_surat">Tekan Tombol + untuk mengajukan surat</string>
    <string name="tidak_ada_notif_admin">Tidak ada notifikasi untuk di tampilkan</string>
    <string name="photo_profil">Photo Profil</string>
    <string name="nim_nip">NIM_NIP</string>
    <string name="nama_account">Nama</string>
    <string name="value_nama_account">Nama</string>
    <string name="email_account">Email</string>
    <string name="value_email_account">Email</string>
    <string name="password_akun">Password Akun</string>
    <string name="value_password_akun">Password Akun</string>
    <string name="logo_account">Logo Account</string>
    <string name="sandi_lama_update_data_hint">sandi lama</string>
    <string name="sandi_baru_update_data_hint">sandi baru</string>
    <string name="value_perihal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dignissim lobortis purus vitae tempor. Proin pulvinar vel massa at condimentum. Morbi augue ligula, maximus faucibus aliquam ac, vulputate commodo mi. Vivamus vitae est at sapien dictum malesuada. Curabitur lectus tortor, accumsan vitae convallis et, luctus at orci. Quisque interdum nulla quis dapibus cursus. Ut arcu diam, eleifend vel maximus quis, volutpat quis dui. Donec et ex convallis, faucibus libero in, sagittis ipsum. Curabitur eget arcu ligula. Vestibulum porttitor, nibh mollis tempor tristique, diam nisi varius justo, id aliquam ipsum risus condimentum lectus.</string>
    <string-array name="dataJurusan">
        <item> Informatika Komputer </item>
        <item> Administrasi Bisnis </item>
    </string-array>
    <string-array name="dataNamaKampus">
        <item> Sudirman Tangerang</item>
        <item> Lp3i Cimone </item>
    </string-array>
</resources>