<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dashboard_menu_admin"
        android:actionLayout="@layout/activity_halaman_admin"/>
    <item
        android:id="@+id/menu_notifikasi_admin"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifikasi_menu_admin"
        android:actionLayout="@layout/activity_halaman_admin"/>
    <item
        android:id="@+id/menu_account_admin"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/account_menu_admin"
        android:actionLayout="@layout/activity_halaman_admin"/>
</menu>