<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.fragment.FragmentAccount">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarWidgetTheme" />

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/image_pp_admin"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/photo_profil" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_data_account_admin"
                    android:layout_marginVertical="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_list_nip_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/nim_nip"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nama_account"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tv_list_nama_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/value_nama_account"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_account"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tv_list_email_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/value_email_account"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password_akun"
                            android:textStyle="bold"/>
                        <TextView
                            android:inputType="textPassword"
                            android:id="@+id/tv_list_password_akun_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/value_password_akun"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:textColor="@color/colorAccent"
                            tools:ignore="TextViewEdits" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>