<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="src_in"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/e_text_update_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nim_nip"
            android:layout_marginVertical="3dp"
            android:inputType="number"
            android:enabled="false"
            android:autofillHints="@string/nim_nip" />

        <EditText
            android:backgroundTintMode="src_in"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/e_text_update_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_nama_account"
            android:layout_marginVertical="2dp"
            android:inputType="textPersonName"
            android:enabled="false"
            android:autofillHints="@string/nama_account" />

        <EditText
            android:id="@+id/e_text_update_email"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="src_in"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:hint="@string/alamat_email_hint_registrasi"
            android:layout_marginVertical="2dp"
            android:inputType="textEmailAddress|textAutoComplete"
            android:autofillHints="@string/alamat_hint_registrasi"/>
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="src_in"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/e_text_update_sandi_lama"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/sandi_lama_update_data_hint"
            app:drawable_hide="@drawable/ic_tampil_password"
            app:drawable_show="@drawable/ic_sembunyikan_password"/>
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="src_in"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/e_text_konfirmasi_update_password_baru"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/sandi_baru_update_data_hint"
            app:drawable_hide="@drawable/ic_tampil_password"
            app:drawable_show="@drawable/ic_sembunyikan_password"/>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/button_perbarui_data"
                android:text="Perbarui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/button_batal_perbarui_data"
                android:text="Batal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

            </LinearLayout>

</RelativeLayout>