<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warnaPrimaryTransparat"
    tools:context=".RegistrasiActivity">
    <ScrollView
        android:foregroundGravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:background="@drawable/gaya_kustom_tombol"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <ImageView
                    android:layout_marginVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/logo_registrasi"
                    android:contentDescription="@string/logo_buat_akun" />
                <EditText
                    android:layout_marginVertical="2dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:backgroundTintMode="src_in"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:id="@+id/e_text_nim_nip_registrasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nim_nip_hint_registrasi"
                    android:autofillHints="@string/nim_nip_hint_registrasi"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/e_text_nama_pengguna_registrasi"
                    android:layout_marginVertical="2dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:backgroundTintMode="src_in"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:autofillHints="@string/username_hint"/>
                <EditText
                    android:id="@+id/e_text_alamat_pengguna_registrasi"
                    android:layout_marginVertical="2dp"
                    android:backgroundTintMode="src_in"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_hint_registrasi"
                    android:inputType="textLongMessage"
                    android:autofillHints="@string/alamat_hint_registrasi"/>
                <EditText
                    android:id="@+id/e_text_alamat_email_registrasi"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:backgroundTintMode="src_in"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_marginVertical="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_email_hint_registrasi"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@string/alamat_email_hint_registrasi"/>
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:backgroundTintMode="src_in"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:id="@+id/e_text_password_registrasi"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/password_hint"
                    app:drawable_hide="@drawable/ic_tampil_password"
                    app:drawable_show="@drawable/ic_sembunyikan_password"/>

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:backgroundTintMode="src_in"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:id="@+id/e_text_konfirmasi_password_registrasi"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/konfirmasi_sandi_hint_registrasi"
                    app:drawable_hide="@drawable/ic_tampil_password"
                    app:drawable_show="@drawable/ic_sembunyikan_password"/>
                <Button
                    android:id="@+id/tombol_buat_akun_registrasi"
                    android:layout_marginVertical="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gaya_kustom_tombol"
                    android:text="@string/create_account"
                    android:textColor="@color/warnaPutih"/>
                <TextView
                    android:id="@+id/text_view_login_registrasi"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>


</RelativeLayout>