<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/warnaPrimaryTransparat"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="20dp"
        android:foregroundGravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="30sp"
            android:src="@drawable/logo_login"
            android:contentDescription="@string/logo_login_deskripsi" />
                <EditText
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_account_box_blue_24dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:backgroundTintMode="src_in"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:id="@+id/e_text_username_login"
                    android:layout_marginVertical="20sp"
                    android:hint="@string/username_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/username_hint"
                    android:inputType="numberDecimal" />
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:backgroundTintMode="src_atop"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:id="@+id/e_text_password_login"
                    android:layout_marginVertical="20sp"
                    android:layout_width="match_parent"
                    app:drawable_show="@drawable/ic_sembunyikan_password"
                    app:drawable_hide="@drawable/ic_tampil_password"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:autofillHints="@string/password_hint"
                    android:inputType="textPassword" />
                <Button
                    android:id="@+id/tombol_login"
                    android:textColor="@color/warnaPutih"
                    android:background="@drawable/gaya_kustom_tombol"
                    android:layout_marginVertical="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"/>
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/t_view_buat_akun"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textAlignment="center"/>



    </LinearLayout>
        <ProgressBar
            android:id="@+id/loading_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            android:layout_marginBottom="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.cardview.widget.CardView>



</RelativeLayout>